---
source: tests/files.rs
expression: snapshot_content
---
(let t0
  (assign
              (Stmt "int *v = malloc(sizeof(int))")
              (Type "int *")
              (Expr "v")
              (Expr "malloc(sizeof(int))")))
(let t1 (malloc (Expr "malloc(sizeof(int))") (Type "int")))
(let prf0 (Fiat (= t1 t1)))
(let t2 (premises (Fiat (= t0 t0)) prf0))
(let t3
  (substitution
        (v (Expr "v"))
        (t2 (Type "int"))
        (s (Stmt "int *v = malloc(sizeof(int))"))
        (c (Expr "malloc(sizeof(int))"))
        (t1 (Type "int *"))))
(let t4
  (struct-lit-field
                    (Expr "(struct s){u, v}")
                    (Field "y")
                    (Expr "v")))
(let prop0
  (=
            (expr-points-to (Expr "(struct s){u, v}"))
            (expr-points-to (Expr "u"))))
(let t5
  (struct-lit-field
                      (Expr "(struct s){u, v}")
                      (Field "x")
                      (Expr "u")))
(let t6
  (assign
                          (Stmt "int *u = malloc(sizeof(int))")
                          (Type "int *")
                          (Expr "u")
                          (Expr "malloc(sizeof(int))")))
(let t7 (premises (Fiat (= t6 t6)) prf0))
(let t8
  (substitution
                    (v (Expr "u"))
                    (t2 (Type "int"))
                    (s (Stmt "int *u = malloc(sizeof(int))"))
                    (c (Expr "malloc(sizeof(int))"))
                    (t1 (Type "int *"))))
(Trans
  (= (AllocVar (Expr "v")) (AllocVar (Expr "u")))
  (Rule
    (= (AllocVar (Expr "v")) (expr-points-to (Expr "v")))
    (name
      "(rule ((assign s t1 v c)
       (malloc c t2))
      ((union (expr-points-to v) (AllocVar v)))
         )")
    t2
    t3)
  (Trans
    (= (expr-points-to (Expr "v")) (AllocVar (Expr "u")))
    (Trans
      (= (expr-points-to (Expr "v")) (expr-points-to (Expr "u")))
      (Sym
        (=
          (expr-points-to (Expr "v"))
          (expr-points-to (Expr "(struct s){u, v}")))
        (Rule
          (=
            (expr-points-to (Expr "(struct s){u, v}"))
            (expr-points-to (Expr "v")))
          (name
            "(rule ((struct-lit-field l f x)
       (= (expr-points-to x) b))
      ((union (expr-points-to l) b))
         )")
          (premises
            (Fiat (= t4 t4))
            (Rule
              (= (expr-points-to (Expr "v")) (expr-points-to (Expr "v")))
              (name
                "(rule ((assign s t1 v c)
       (malloc c t2))
      ((union (expr-points-to v) (AllocVar v)))
         )")
              t2
              t3))
          (substitution
            (l (Expr "(struct s){u, v}"))
            (f (Field "y"))
            (x (Expr "v"))
            (b (expr-points-to (Expr "v"))))))
      (Sym
        prop0
        (Sym
          (=
            (expr-points-to (Expr "u"))
            (expr-points-to (Expr "(struct s){u, v}")))
          (Rule
            prop0
            (name
              "(rule ((struct-lit-field l f x)
       (= (expr-points-to x) b))
      ((union (expr-points-to l) b))
         )")
            (premises
              (Fiat (= t5 t5))
              (Rule
                (= (expr-points-to (Expr "u")) (expr-points-to (Expr "u")))
                (name
                  "(rule ((assign s t1 v c)
       (malloc c t2))
      ((union (expr-points-to v) (AllocVar v)))
         )")
                t7
                t8))
            (substitution
              (l (Expr "(struct s){u, v}"))
              (f (Field "x"))
              (x (Expr "u"))
              (b (expr-points-to (Expr "u"))))))))
    (Sym
      (= (expr-points-to (Expr "u")) (AllocVar (Expr "u")))
      (Rule
        (= (AllocVar (Expr "u")) (expr-points-to (Expr "u")))
        (name
          "(rule ((assign s t1 v c)
       (malloc c t2))
      ((union (expr-points-to v) (AllocVar v)))
         )")
        t7
        t8))))(let t0
  (assign
                (Stmt "int *v = malloc(sizeof(int))")
                (Type "int *")
                (Expr "v")
                (Expr "malloc(sizeof(int))")))
(let t1 (malloc (Expr "malloc(sizeof(int))") (Type "int")))
(let t2
  (assign
                (Stmt "struct s *sp = malloc(sizeof(struct s))")
                (Type "struct s*")
                (Expr "sp")
                (Expr "malloc(sizeof(struct s))")))
(let t3 (malloc (Expr "malloc(sizeof(struct s))") (Type "struct s")))
(Rule
  (= (@ExistsConstructor1) (@ExistsConstructor1))
  (name "@prove_exists_rule1")
  (premises
    (Rule
      (= (AllocVar (Expr "v")) (expr-points-to (Expr "v")))
      (name
        "(rule ((assign s t1 v c)
       (malloc c t2))
      ((union (expr-points-to v) (AllocVar v)))
         )")
      (premises (Fiat (= t0 t0)) (Fiat (= t1 t1)))
      (substitution
        (v (Expr "v"))
        (t2 (Type "int"))
        (s (Stmt "int *v = malloc(sizeof(int))"))
        (c (Expr "malloc(sizeof(int))"))
        (t1 (Type "int *"))))
    (Rule
      (= (AllocVar (Expr "sp")) (expr-points-to (Expr "sp")))
      (name
        "(rule ((assign s t1 v c)
       (malloc c t2))
      ((union (expr-points-to v) (AllocVar v)))
         )")
      (premises (Fiat (= t2 t2)) (Fiat (= t3 t3)))
      (substitution
        (v (Expr "sp"))
        (t2 (Type "struct s"))
        (s (Stmt "struct s *sp = malloc(sizeof(struct s))"))
        (c (Expr "malloc(sizeof(struct s))"))
        (t1 (Type "struct s*"))))
    (Fiat (= () ())))
  (substitution
    (@v798 (expr-points-to (Expr "v")))
    (@v799 (expr-points-to (Expr "sp")))))(
   (@AllocVarView (Expr "u") (AllocVar (Expr "u")))
)
(
   (@AllocVarView (Expr "sp") (AllocVar (Expr "sp")))
)
